--- a/CoverStory.xcodeproj/xcshareddata/xcschemes/CoverStory.xcscheme
+++ b/CoverStory.xcodeproj/xcshareddata/xcschemes/CoverStory.xcscheme
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F426B70D0E0A24AE00348386"
-               BuildableName = "UnitTests.octest"
-               BlueprintName = "UnitTests"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "CoverStoryTests"
                ReferencedContainer = "container:CoverStory.xcodeproj">
             </BuildableReference>
          </TestableReference>
