Convert application target to ARC

--- a/CoverStory.xcodeproj/xcshareddata/xcschemes/CoverStory.xcscheme
+++ b/CoverStory.xcodeproj/xcshareddata/xcschemes/CoverStory.xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F426B70D0E0A24AE00348386"
-               BuildableName = "UnitTests.xctest"
+               BuildableName = "UnitTests.octest"
                BlueprintName = "CoverStoryTests"
                ReferencedContainer = "container:CoverStory.xcodeproj">
             </BuildableReference>
