--- a/CoverStory.xcodeproj/xcshareddata/xcschemes/Create Appcast.xcscheme
+++ b/CoverStory.xcodeproj/xcshareddata/xcschemes/Create Appcast.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0450"
-   version = "1.3">
+   LastUpgradeVersion = "0630"
+   version = "1.8">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -40,6 +40,15 @@
       debugDocumentVersioning = "YES"
       enableOpenGLFrameCaptureMode = "0"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8B67E07511B97A09000DB052"
+            BuildableName = "Create Appcast"
+            BlueprintName = "Create Appcast"
+            ReferencedContainer = "container:CoverStory.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
